[package]
name = "neotron-api"
version = "0.2.0"
edition = "2021"
authors = [
    "Jonathan 'theJPster' Pallant <github@thejpster.org.uk>",
    "The Neotron Developers"
]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "The API between Neotron OS and Neotron applications"
repository = "https://github.com/neotron-compute/neotron-api"

[dependencies]
neotron-ffi = "0.1"
bitflags = "2"
